<resources>
    <string name="app_name">Assignment 2</string>
    <string name="start_quiz">Start Assessment</string>
    <string name="last_result_format">Last Result: %1$s (%2$s)</string>
    <string name="last_result_none">Last Result: None</string>
    <string name="question_format">Question %1$d/%2$d</string>
    <string name="start_over">Start Over</string>
    <string name="personality_label">Your Personality</string>
    <string name="examples_label">Career Examples</string>
    <string name="home_description">Discover your ideal career path by answering 10 simple questions about your interests and strengths.</string>
</resources>
